# Energy_Modelling

./: .env.example  .gitignore  README.md  agents.md  pyproject.toml
docs/: code_review.md  energy_market_spec.md  hackathon_challenge.md  kaggle.md  kaggle_description.md  kaggle_upload.md  market_implementation_status.md
issues/: ROADMAP.md  issue_1_configurable_entry_price_benchmarks.md  issue_2_dashboard_saved_results.md  issue_3_new_strategies.md  issue_4_dashboard_benchmark_views.md  issue_5_refactor_large_files.md  issue_6_recompute_cli_and_docs.md
kaggle_upload/: dataset-metadata.json
notebooks/: baseline-day-ahead-price-prediction-for-deu.ipynb  hackathon_baseline.ipynb
scripts/: debug_market_convergence.py  phase10_ema_price_update.py  phase10b_behaviour_inventory.py  phase10c_mechanism_attribution.py  phase10d_cluster_analysis.py  phase10e_sentinel_traces.py  phase10f_strategy_robustness.py  phase8_collect_forecasts.py  phase8_experiments.py  phase8b_experiments.py  phase9_experiments.py  profile_benchmark.py  regenerate_market_pkls.py  run_full_backtest.py  scan_years.py  verify_theorems.py
strategies/: __init__.py  always_long.py  always_short.py  balanced_long_short.py  bayesian_ridge.py  boosted_spread_ml.py  carbon_gas_ratio.py  carbon_trend.py  commodity_cost.py  composite_signal.py  consensus_signal.py  contrarian_momentum.py  conviction_weighted.py  cross_border_spread.py  czech_austrian_mean.py  day_of_week.py  de_fr_spread.py  de_nl_spread.py  decision_tree_direction.py  denmark_spread.py  diversity_ensemble.py  dow_composite.py  gas_trend.py  (+81 more)
(+276 files in other folders)
