[project]
name = "energy-modelling"
version = "0.1.0"
description = "Energy market forecasting — data collection and modelling pipeline"
readme = "README.md"
authors = [
    { name = "William Dennis", email = "wwdennis.home@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "entsoe-py>=0.6",
    "openmeteo-requests>=1.2",
    "requests-cache>=1.1",
    "retry-requests>=2.0",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "loguru>=0.7",
    "pydantic-settings>=2.0",
    "numpy>=2.0",
    "streamlit>=1.38",
    "plotly>=5.18",
    "yfinance>=0.2.36",
    "kaggle>=1.6,<2.0",
    "matplotlib>=3.10.8",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ty>=0.0.1a7",
    "ruff>=0.14.0",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
collect-data = "energy_modelling.data_collection.cli:main"
build-backtest-data = "energy_modelling.backtest.cli:main"
recompute-all = "energy_modelling.backtest.recompute:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore:A NumPy version:UserWarning",
]
